# randomWalk

./: .gitignore  CMakeLists.txt  README.md  monteCarlo.py  parallel.py  parameterScanResults.ipynb  parse.py  randomWalkParticle.py
include/: mc.hpp  output.hpp  particle1d.hpp
legacyPythonCode/: monteCarlo.py  randomWalkParticle.py
src/: main.cpp  mc.cpp  output.cpp  particle1d.cpp
